[package]
authors = ["Alan Hoffmeister <alanhoffmeister@gmail.com>"]
description = "Blazing fast in-memory key/value storage"
keywords = ["key", "value", "store", "performance", "in", "memory"]
license = "ISC"
name = "rackety"
repository = "https://github.com/alanhoff/rackety"
version = "0.1.0"

[dependencies]
clap = "2.19.0"
log = "0.3.6"
num_cpus = "1.1.0"
shlex = "0.1.1"
slog = "1.3.2"
slog-stdlog = "1.1.0"
slog-term = "1.3.3"

[dependencies.coio]
git = "https://github.com/alanhoff/coio-rs.git"
rev = "67c7dfd39ed479b75887e75f4b8d79fefc1c8432"
